# CDDA-Map-Editor

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shaders/: grid.wgsl
saves/: .gitkeep
src/: main.rs
src/common/: io.rs  mod.rs
src/editor_data/: data.rs  io.rs  mod.rs
src/graphics/: mod.rs
src/graphics/tileset/: current.rs  legacy.rs  mod.rs
src/grid/: mod.rs  resources.rs  systems.rs
src/hotbar/: interaction.rs  mod.rs  systems.rs  tabs.rs
src/map/: data.rs  events.rs  io.rs  loader.rs  map_entity.rs  mod.rs  plugin.rs  resources.rs  system.rs  systems.rs
src/mapgen/: map_entity.rs  mod.rs
src/palettes/: data.rs  io.rs  loader.rs  mod.rs
src/program/: data.rs  io.rs  mod.rs  plugin.rs
src/project/: data.rs  io.rs  loader.rs  mod.rs  plugin.rs  resources.rs  saver.rs  systems.rs
src/region_settings/: data.rs  io.rs  loader.rs  mod.rs
src/settings/: data.rs  io.rs  mod.rs
src/tile_selector/: build.rs  mod.rs
src/tiles/: components.rs  data.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/ui/: components.rs  interaction.rs  mod.rs  style.rs  systems.rs
src/ui/egui_utils/: mod.rs
src/ui/grid/: mod.rs  resources.rs  systems.rs
src/ui/hotbar/: components.rs  mod.rs
src/ui/minimap/: mod.rs  plugin.rs  systems.rs
src/ui/settings/: mod.rs
src/ui/tabs/: components.rs  events.rs  mod.rs
src/ui/terrain/: mod.rs
src/ui/tiles/: mod.rs
testing_data/: tile_config.json  tileset.txt
