[package]
name = "CDDA-Map-Editor"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["default", "derive"] }
serde_json = "1.0.111"
either = { version = "1.9.0", features = ["serde"] }
bevy = { version = "0.12.1", features = ["bevy_ui"] }
bevy_egui = "0.24.0"
image = { version = "0.24.7", features = ["default"] }
winit = { version = "0.28.7", features = ["default"] }
bevy_file_dialog = "0.3.1"
anyhow = "1.0.79"
directories = "5.0.1"
log = "0.4.20"