[package]
name = "CDDA-Map-Editor"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[build]
rustflags = ["-Z", "threads=8"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["default", "derive"] }
color-print = "0.3.5"
strum = "0.26.2"
strum_macros = "0.26.2"
serde_json = "1.0.111"
clap = { version = "4.5.4", features = ["color"] }
either = { version = "1.9.0", features = ["serde"] }
chrono = "0.4.37"
bevy = { version = "0.13.1", features = ["bevy_ui", "dynamic_linking"] }
image = { version = "0.25.1", features = ["default"] }
winit = { version = "0.29.15", features = ["default"] }
bevy_file_dialog = "0.5.0"
anyhow = "1.0.79"
directories = "5.0.1"
log = "0.4.20"
rand = "0.8.5"
imageproc = "0.24.0"
bevy-inspector-egui = "0.23.4"
bevy_console = "0.11.1"
num = "0.4.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"